force-app/main/default/objects/DispatchVehicle__c/DispatchVehicle__c.object-meta.xml
<CustomObject>
    <label>配車車両</label>
    <nameField>
        <displayFormat>DEV-{00000000}</displayFormat>
        <label>配車車両#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>