force-app/main/default/objects/DispatchVehicle__c/fields/ArrivalDatetime__c.field-meta.xml
<CustomField>
    <fullName>ArrivalDatetime__c</fullName>
    <label>入庫日時</label>
    <type>DateTime</type>
</CustomField>