force-app/main/default/objects/DispatchVehicle__c/fields/DeliveryDocumentPrintDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDocumentPrintDate__c</fullName>
    <label>納品書印刷日</label>
    <type>DateTime</type>
</CustomField>