force-app/main/default/objects/DispatchVehicle__c/fields/DrivingTime__c.field-meta.xml
<CustomField>
    <fullName>DrivingTime__c</fullName>
    <label>走行時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>