force-app/main/default/objects/DispatchVehicle__c/fields/EmptyMileage__c.field-meta.xml
<CustomField>
    <fullName>EmptyMileage__c</fullName>
    <label>空車距離</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>