force-app/main/default/objects/DispatchVehicle__c/fields/EngagementTime__c.field-meta.xml
<CustomField>
    <fullName>EngagementTime__c</fullName>
    <description>RaySheet：富士エコー運賃明細インポートから転記</description>
    <label>拘束時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>