force-app/main/default/objects/DispatchVehicle__c/fields/ExtraDistanceCharge__c.field-meta.xml
<CustomField>
    <fullName>ExtraDistanceCharge__c</fullName>
    <description>RaySheet：富士エコー運賃明細インポートから転記</description>
    <label>距離増し</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>