force-app/main/default/objects/DispatchVehicle__c/fields/GasolinePrice__c.field-meta.xml
<CustomField>
    <fullName>GasolinePrice__c</fullName>
    <label>燃料単価</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>