force-app/main/default/objects/DispatchVehicle__c/fields/IdleTime__c.field-meta.xml
<CustomField>
    <fullName>IdleTime__c</fullName>
    <label>アイドル時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>