force-app/main/default/objects/DispatchVehicle__c/fields/InspectionDocumentCreated__c.field-meta.xml
<CustomField>
    <fullName>InspectionDocumentCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【未使用】検品書作成済</label>
    <type>Checkbox</type>
</CustomField>