force-app/main/default/objects/DispatchVehicle__c/fields/InspectionDocumentPrintDate__c.field-meta.xml
<CustomField>
    <fullName>InspectionDocumentPrintDate__c</fullName>
    <label>検品表印刷日</label>
    <type>DateTime</type>
</CustomField>