force-app/main/default/objects/DispatchVehicle__c/fields/InspectionDocumentPrintDateTime__c.field-meta.xml
<CustomField>
    <fullName>InspectionDocumentPrintDateTime__c</fullName>
    <label>検品表印刷日時</label>
    <type>DateTime</type>
</CustomField>