force-app/main/default/objects/DispatchVehicle__c/fields/LoadedMileage__c.field-meta.xml
<CustomField>
    <fullName>LoadedMileage__c</fullName>
    <label>実車距離</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>