force-app/main/default/objects/DispatchVehicle__c/fields/ShippingDatetime__c.field-meta.xml
<CustomField>
    <fullName>ShippingDatetime__c</fullName>
    <label>出庫日時</label>
    <type>DateTime</type>
</CustomField>