force-app/main/default/objects/DispatchVehicle__c/fields/StopTime__c.field-meta.xml
<CustomField>
    <fullName>StopTime__c</fullName>
    <label>停止時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>