force-app/main/default/objects/DispatchVehicle__c/fields/Subcontractor__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>下請け業者</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>配車車両</relationshipLabel>
    <relationshipName>DispatchVehicleList</relationshipName>
    <type>Lookup</type>
</CustomField>