force-app/main/default/objects/DispatchVehicle__c/fields/TotalFare__c.field-meta.xml
<CustomField>
    <fullName>TotalFare__c</fullName>
    <description>RaySheet：富士エコー運賃明細インポートから転記</description>
    <label>合計運賃</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>