force-app/main/default/objects/DispatchVehicle__c/fields/UsageType__c.field-meta.xml
<CustomField>
    <fullName>UsageType__c</fullName>
    <label>利用種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
                <label>配送</label>
            </value>
            <value>
                <fullName>OilChange</fullName>
                <label>オイル交換</label>
            </value>
            <value>
                <fullName>Inspection</fullName>
                <label>点検</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>