force-app/main/default/objects/DispatchVehicle__c/fields/VehicleMaster__c.field-meta.xml
<CustomField>
    <fullName>VehicleMaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>車両</label>
    <referenceTo>VehicleMaster__c</referenceTo>
    <relationshipLabel>配車車両</relationshipLabel>
    <relationshipName>DispatchVehicleList</relationshipName>
    <type>Lookup</type>
</CustomField>