force-app/main/default/objects/DispatchVehicle__c/fields/VehicleType__c.field-meta.xml
<CustomField>
    <fullName>VehicleType__c</fullName>
    <description>RaySheet：富士エコー運賃明細インポートから転記</description>
    <label>車種</label>
    <length>255</length>
    <type>Text</type>
</CustomField>