force-app/main/default/objects/DispatchVehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VehicleMaster__c</columns>
    <columns>CharteredVehicleNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>