force-app/main/default/objects/DispatchVehicle__c/listViews/InspectionDocumentUnprintedList.listView-meta.xml
<ListView>
    <fullName>InspectionDocumentUnprintedList</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InspectionDocumentCreated__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>検品書印刷待ち一覧</label>
</ListView>